<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        style="@style/MyCardViewStyle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/Añadirproducto"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:textSize="16sp" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_add"
                android:background="@drawable/plus_circle"
                android:id="@+id/imgbAgregar"
                android:contentDescription="@string/Descripcionimg" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_gravity="center_horizontal"
        android:background="#5a6dd8"
        android:layout_marginBottom="7dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        style="@style/MyCardViewStyle"
        android:id="@+id/cvContentListaProductos"
        android:nestedScrollingEnabled="false"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_rowWeight="1"
        android:layout_weight="2">

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rvListaItems"
            android:visibility="visible">

        </android.support.v7.widget.RecyclerView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Nosehaagregadoningunproducto"
            android:gravity="center_vertical|center_horizontal"
            android:id="@+id/txtMsjSinItems"
            android:textSize="20sp"
            android:visibility="gone" />

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_gravity="center_horizontal"
        android:background="#5a6dd8"
        android:layout_marginBottom="7dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="5dp" />

    <android.support.v7.widget.CardView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/view"
        android:layout_rowWeight="1"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/Total_puntos"
                android:layout_margin="5dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="center_vertical" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ceros"
                android:layout_margin="5dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="right"
                android:id="@+id/txtTotal" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>




