<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center_horizontal">
        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/imgbscanner_input"
            android:layout_weight="1"
            android:src="@drawable/barcode_input"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/Descripcionimg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/Escribircodigo"
            android:id="@+id/textView" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center_horizontal">
    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/imgbscanner_read"
        android:layout_weight="1"
        android:src="@drawable/scanning_barcode"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/Descripcionimg"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/Escanearcodigo"
            android:id="@+id/textView2" />
    </LinearLayout>
</LinearLayout>