<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kds.multiapps.shoping.MainActivity"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        style="@style/MyCardViewStyle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/Añadirlista"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:textSize="16sp" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_add"
                android:background="@drawable/plus_circle"
                android:id="@+id/imgbAgregar"
                android:contentDescription="@string/Descripcionimg"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_gravity="center_horizontal"
        android:background="#5a6dd8"
        android:layout_marginBottom="7dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/MyCardViewStyle"
        android:layout_margin="5dp">

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rvListaItems">

        </android.support.v7.widget.RecyclerView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Nosehaagregadoningunalista"
            android:gravity="center_vertical|center_horizontal"
            android:id="@+id/txtMsjSinItems"
            android:textSize="20sp"
            android:visibility="gone" />
    </android.support.v7.widget.CardView>


</LinearLayout>
